--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
+
+.Container{
+  height:600px;
+  width:1400px;
+  margin-left: 100px;
+  margin-top:70px;
+  border:2px solid lightsalmon;
+  background-color:hsl(266, 47%, 61%);
+  /* background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2020/10/Best-Among-Us-Desktop-PC-Wallpaper-Backgrounds-MaternitySignpost-Neytrix.jpg"); */
+   
+}
+
+h2{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color:darkred
 }
